Read/Write background color

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW 156 156 1655 865
+MoveWindow IDM_APPL_WINDOW -1920 1203 1639 895
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 164 208 1642 786
+MoveWindow IDM_MAIN_WINDOW -1912 1255 1626 816
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 0 0 310 310
+MoveWindow IDM_MINI_WINDOW -322 1105 340 340
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW 200 0 145 210
+MoveWindow IDM_MONITOR_WINDOW 200 0 175 240
 ShowWindow IDM_MONITOR_WINDOW SW_HIDE
-MoveWindow IDM_CRSR_WINDOW 0 300 304 229
+MoveWindow IDM_CRSR_WINDOW -487 1885 304 229
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW 164 208 283 383
+MoveWindow IDM_PARAM_WINDOW -270 1422 283 383
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 0 0 304 284
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW 0 0 310 310
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_DESC_WINDOW -315 1797 340 340
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER 100 100 510 410
+MoveWindow IDM_SIG_DESIGNER -1738 1357 540 440
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
