grid in SignalControl

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1920 1203 1665 921
+MoveWindow IDM_APPL_WINDOW -1913 1166 1679 935
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1912 1255 1652 842
+MoveWindow IDM_MAIN_WINDOW -1905 1218 1666 856
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -264 1105 308 366
+MoveWindow IDM_MINI_WINDOW -264 1105 322 380
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW 200 0 201 266
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_MONITOR_WINDOW -1862 1473 611 281
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -761 1668 304 229
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -270 1422 283 383
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 0 0 304 284
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_DESC_WINDOW -395 1746 366 366
+MoveWindow IDM_DESC_WINDOW -395 1746 380 380
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -1575 1153 814 907
+MoveWindow IDM_SIG_DESIGNER -966 1244 839 665
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
