--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,10 +1,10 @@
-MoveWindow IDM_APPL_WINDOW -1913 1166 1687 943
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1905 1218 1674 864
+MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_MAIN_WINDOW -1920 1124 1924 970
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -264 1105 330 388
+MoveWindow IDM_MINI_WINDOW -264 1105 344 402
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1862 1473 619 289
+MoveWindow IDM_MONITOR_WINDOW -1862 1473 633 303
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -761 1668 304 229
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
@@ -12,7 +12,7 @@ MoveWindow IDM_PARAM_WINDOW -270 1422 283 383
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 0 0 304 284
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_DESC_WINDOW -395 1746 388 388
+MoveWindow IDM_DESC_WINDOW -395 1746 402 402
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -1212 1227 852 870
+MoveWindow IDM_SIG_DESIGNER -1006 1223 866 884
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
