--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -2,17 +2,17 @@ MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_MAIN_WINDOW -1920 1124 1924 970
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -264 1105 358 416
+MoveWindow IDM_MINI_WINDOW -875 1158 400 458
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -669 1824 647 317
+MoveWindow IDM_MONITOR_WINDOW -1490 1529 689 359
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -761 1668 304 229
+MoveWindow IDM_CRSR_WINDOW -329 1387 304 229
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -270 1422 283 383
+MoveWindow IDM_PARAM_WINDOW -439 1696 283 383
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 0 0 304 284
-ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_DESC_WINDOW -395 1746 416 416
+MoveWindow IDM_PERF_WINDOW -1682 1214 304 284
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_DESC_WINDOW -546 1568 458 458
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -1006 1223 880 898
+MoveWindow IDM_SIG_DESIGNER -1289 1458 924 1174
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
