--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClCompile Include="Preferences.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="WrapBase.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
