--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="ScriptStack.ixx" />
     <ClCompile Include="Symtab.cpp" />
     <ClCompile Include="Symtab.ixx" />
+    <ClCompile Include="WrapBase.cpp" />
     <ClCompile Include="WrapBase.ixx" />
     <ClCompile Include="WrapInclude.cpp" />
   </ItemGroup>
