--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -164,6 +164,9 @@
     <ClCompile Include="NNetModelIO.cpp" />
     <ClCompile Include="NNetModelIO.ixx" />
     <ClCompile Include="NNetModelStorage.ixx" />
+    <ClCompile Include="NNetPreferences.cpp" />
+    <ClCompile Include="NNetPreferences.ixx" />
+    <ClCompile Include="NNetWrapBase.ixx" />
     <ClCompile Include="NNetWrapperBase.ixx" />
     <ClCompile Include="NobIo.cpp" />
     <ClCompile Include="WrapActiveSigGen.ixx" />
@@ -175,6 +178,7 @@
     <ClCompile Include="WrapNrOfTracks.ixx" />
     <ClCompile Include="WrapProtocol.ixx" />
     <ClCompile Include="WrapSetSigGen.ixx" />
+    <ClCompile Include="WrapSetScales.ixx" />
     <ClCompile Include="WrapSignalData.ixx" />
     <ClCompile Include="WrapSignalGenerator.ixx" />
     <ClCompile Include="WrapSignalInfo.ixx" />
