--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -2,9 +2,9 @@ MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_MAIN_WINDOW -1920 1124 1924 970
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -875 1158 420 478
+MoveWindow IDM_MINI_WINDOW -875 1158 434 492
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1490 1529 709 379
+MoveWindow IDM_MONITOR_WINDOW -1490 1529 723 393
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -329 1387 304 229
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
@@ -12,7 +12,7 @@ MoveWindow IDM_PARAM_WINDOW -439 1696 283 383
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -1682 1214 304 284
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -853 1589 478 478
+MoveWindow IDM_DESC_WINDOW -853 1589 492 492
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -1166 1169 945 894
-ShowWindow IDM_SIG_DESIGNER SW_HIDE
+MoveWindow IDM_SIG_DESIGNER -1166 1169 959 908
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
