--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -126,5 +126,8 @@
     <ClCompile Include="IoConstants.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BaseCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
