--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
@@ -72,5 +72,8 @@
     <ClCompile Include="CommandStack.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="StdStackCommand.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
