--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="Scanner.cpp" />
     <ClCompile Include="Script.ixx" />
     <ClCompile Include="ScriptStack.ixx" />
+    <ClCompile Include="StdStackCommand.ixx" />
     <ClCompile Include="Symtab.cpp" />
     <ClCompile Include="Symtab.ixx" />
     <ClCompile Include="Wrapper.ixx" />
