--- a/NNet/NNetCommands/NNetCommands.vcxproj
+++ b/NNet/NNetCommands/NNetCommands.vcxproj
@@ -67,6 +67,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Toolbox\Commands\Commands.vcxproj">
+      <Project>{7f40ede9-bae2-4924-87d3-5cd19477b54a}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\Toolbox\IoUtil\IoUtil.vcxproj">
       <Project>{dd5676cc-9c49-4ac7-82ff-5ce0f2f7bfed}</Project>
     </ProjectReference>
