--- a/Toolbox/Commands/Commands.vcxproj
+++ b/Toolbox/Commands/Commands.vcxproj
@@ -19,11 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BoolWrapper.ixx" />
     <ClCompile Include="CommandStack.cpp" />
     <ClCompile Include="CommandStack.ixx" />
+    <ClCompile Include="Preferences.cpp" />
+    <ClCompile Include="Preferences.ixx" />
     <ClCompile Include="RedoCommand.ixx" />
     <ClCompile Include="StdStackCommand.ixx" />
     <ClCompile Include="UndoCommand.ixx" />
+    <ClCompile Include="WrapInclude.cpp" />
+    <ClCompile Include="Wrapper.ixx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\runtimeCPP\runtimeCPP.vcxproj">
