--- a/Toolbox/Commands/Commands.vcxproj.filters
+++ b/Toolbox/Commands/Commands.vcxproj.filters
@@ -30,5 +30,20 @@
     <ClCompile Include="UndoCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BoolWrapper.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Preferences.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Preferences.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WrapInclude.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Wrapper.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
