--- a/Toolbox/Commands/Commands.vcxproj.filters
+++ b/Toolbox/Commands/Commands.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="Wrapper.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BaseCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
