--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -2,17 +2,17 @@ MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_MAIN_WINDOW -1920 1124 1924 970
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -1696 1503 496 554
-ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -790 1613 785 455
+MoveWindow IDM_MINI_WINDOW -1696 1503 522 580
+ShowWindow IDM_MINI_WINDOW SW_HIDE
+MoveWindow IDM_MONITOR_WINDOW -790 1613 811 481
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -1625 1298 304 229
-ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_CRSR_WINDOW SW_HIDE
 MoveWindow IDM_PARAM_WINDOW -1581 1400 283 383
-ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PARAM_WINDOW SW_HIDE
 MoveWindow IDM_PERF_WINDOW -1682 1214 304 284
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -660 1372 554 554
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_DESC_WINDOW -660 1372 580 580
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -1870 1606 1021 970
+MoveWindow IDM_SIG_DESIGNER -1871 1563 1047 996
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
