--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_MAIN_WINDOW -1920 1124 1924 970
-ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -1696 1503 522 580
-ShowWindow IDM_MINI_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW -790 1613 811 481
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -1625 1298 304 229
-ShowWindow IDM_CRSR_WINDOW SW_HIDE
-MoveWindow IDM_PARAM_WINDOW -1581 1400 283 383
-ShowWindow IDM_PARAM_WINDOW SW_HIDE
-MoveWindow IDM_PERF_WINDOW -1682 1214 304 284
-ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_DESC_WINDOW -660 1372 580 580
-ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -1871 1563 1047 996
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+MoveWindow IDM_APPL_WINDOW -1676 1170 1651 892
+MoveWindow IDM_MAIN_WINDOW -1668 1222 1636 811
+MoveWindow IDM_MINI_WINDOW -1604 1397 306 306
+MoveWindow IDM_MONITOR_WINDOW 200 0 141 206
+MoveWindow IDM_CRSR_WINDOW -1609 1869 304 229
+MoveWindow IDM_PARAM_WINDOW -1919 1405 283 383
+MoveWindow IDM_PERF_WINDOW -1625 1125 304 284
+MoveWindow IDM_DESC_WINDOW -1907 1094 306 306
+MoveWindow IDM_SIG_DESIGNER -1910 1635 506 406
+ShowWindow IDM_APPL_WINDOWSW_SHOWNORMAL
+ShowWindow IDM_MAIN_WINDOWSW_SHOWNORMAL
+ShowWindow IDM_MINI_WINDOWSW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOWSW_HIDE
+ShowWindow IDM_CRSR_WINDOWSW_SHOWNORMAL
+ShowWindow IDM_PARAM_WINDOWSW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOWSW_SHOWNORMAL
+ShowWindow IDM_DESC_WINDOWSW_SHOWNORMAL
+ShowWindow IDM_SIG_DESIGNERSW_SHOWNORMAL
