--- a/Toolbox/Commands/Commands.vcxproj
+++ b/Toolbox/Commands/Commands.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BaseCommand.cpp" />
     <ClCompile Include="BaseCommand.ixx" />
     <ClCompile Include="BoolWrapper.ixx" />
     <ClCompile Include="CommandStack.cpp" />
