--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -132,5 +132,8 @@
     <ClCompile Include="NNetSimuRunning.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MainScales.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
