--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -75,5 +75,8 @@
     <ClCompile Include="IoConstants.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Raster.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
