--- a/NNet/NNetCommands/NNetCommands.vcxproj.filters
+++ b/NNet/NNetCommands/NNetCommands.vcxproj.filters
@@ -216,5 +216,8 @@
     <ClCompile Include="SetGridCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SetScanAreaCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
