--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1742 1130 1691 932
-MoveWindow IDM_MAIN_WINDOW -1734 1182 1676 851
-MoveWindow IDM_MINI_WINDOW -1604 1397 346 346
-MoveWindow IDM_MONITOR_WINDOW 200 0 181 246
-MoveWindow IDM_CRSR_WINDOW -1609 1869 304 229
-MoveWindow IDM_PARAM_WINDOW -1919 1405 283 383
-MoveWindow IDM_PERF_WINDOW -1909 1821 304 284
-MoveWindow IDM_DESC_WINDOW -1907 1094 346 346
-MoveWindow IDM_SIG_DESIGNER -1910 1635 546 446
+MoveWindow IDM_APPL_WINDOW -1915 1130 1509 948
+MoveWindow IDM_MAIN_WINDOW -1907 1182 1494 867
+MoveWindow IDM_MINI_WINDOW -362 1091 362 362
+MoveWindow IDM_MONITOR_WINDOW 200 0 197 262
+MoveWindow IDM_CRSR_WINDOW -307 1877 304 229
+MoveWindow IDM_PARAM_WINDOW -270 1457 283 383
+MoveWindow IDM_PERF_WINDOW -352 1635 304 284
+MoveWindow IDM_DESC_WINDOW -1907 1094 362 362
+MoveWindow IDM_SIG_DESIGNER -897 1465 562 462
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOW SW_HIDE
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
