work on toggle scan area

--- a/NNet/NNetCommands/NNetCommands.vcxproj
+++ b/NNet/NNetCommands/NNetCommands.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="SplitPipeCommand.ixx" />
     <ClCompile Include="StartStimulusCmd.ixx" />
     <ClCompile Include="ToggleEmphModeCmd.ixx" />
+    <ClCompile Include="ToggleScanModeCmd.ixx" />
     <ClCompile Include="ToggleStopOnTriggerCmd.ixx" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
