--- a/NNet/NNetCommands/NNetCommands.vcxproj.filters
+++ b/NNet/NNetCommands/NNetCommands.vcxproj.filters
@@ -219,5 +219,8 @@
     <ClCompile Include="SetScanAreaCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ToggleScanModeCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
