--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,16 +1,16 @@
-MoveWindow IDM_APPL_WINDOW -1915 1130 1523 962
-MoveWindow IDM_MAIN_WINDOW -1907 1182 1508 881
-MoveWindow IDM_MINI_WINDOW -362 1091 376 376
-MoveWindow IDM_MONITOR_WINDOW 200 0 211 276
+MoveWindow IDM_APPL_WINDOW -1915 1130 1531 970
+MoveWindow IDM_MAIN_WINDOW -1907 1182 1516 889
+MoveWindow IDM_MINI_WINDOW -362 1091 384 384
+MoveWindow IDM_MONITOR_WINDOW 200 0 219 284
 MoveWindow IDM_CRSR_WINDOW -307 1877 304 229
-MoveWindow IDM_PARAM_WINDOW -270 1457 283 433
+MoveWindow IDM_PARAM_WINDOW -270 1457 283 469
 MoveWindow IDM_PERF_WINDOW -352 1635 304 284
-MoveWindow IDM_DESC_WINDOW -1907 1094 376 376
-MoveWindow IDM_SIG_DESIGNER -973 1425 576 476
+MoveWindow IDM_DESC_WINDOW -1907 1094 384 384
+MoveWindow IDM_SIG_DESIGNER -973 1425 584 484
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_HIDE
