--- a/NNet/NNetScan/NNetScan.vcxproj.filters
+++ b/NNet/NNetScan/NNetScan.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="NNetScan.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ScanMatrix.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
